# bergamot-translator

./: .buildinfo  .clang-format  .gitignore  .gitmodules  CI.html  CMakeLists.txt  README.md  Unified_API.html  build-wasm.sh  contributing.html  genindex.html  graph.html  index.html  marian-integration.html  objects.inv  operators.html  search.html  searchindex.js  setup.py  wasm-example.html
_static/: documentation_options.js
api/: classAbstractTranslationModel.html  classQualityScore.html  classTranslationModel.html  classTranslationRequest.html  classTranslationResult.html  class_view_hierarchy.html  classmarian_1_1bergamot_1_1AlignedVector.html  classmarian_1_1bergamot_1_1Annotation.html  classmarian_1_1bergamot_1_1Batch.html  classmarian_1_1bergamot_1_1BatchTranslator.html  classmarian_1_1bergamot_1_1Batcher.html  classmarian_1_1bergamot_1_1CLIAppInterface.html  classmarian_1_1bergamot_1_1MarianDecoder.html  classmarian_1_1bergamot_1_1PCQueue.html  classmarian_1_1bergamot_1_1Request.html  classmarian_1_1bergamot_1_1RequestSentence.html  classmarian_1_1bergamot_1_1Response.html  classmarian_1_1bergamot_1_1ResponseBuilder.html  classmarian_1_1bergamot_1_1SentenceRanges.html  classmarian_1_1bergamot_1_1SentenceSplitter.html  classmarian_1_1bergamot_1_1Service.html  classmarian_1_1bergamot_1_1ServiceCLI.html  classmarian_1_1bergamot_1_1TextProcessor.html  classmarian_1_1bergamot_1_1ThreadsafeBatcher.html  classmarian_1_1bergamot_1_1UnboundedSingleQueue.html  classmarian_1_1bergamot_1_1Vocabs.html  classmarian_1_1bergamot_1_1WASMApp.html  classmarian_1_1bergamot_1_1app_1_1CLIAppInterface.html  classmarian_1_1bergamot_1_1app_1_1Decoder.html  classmarian_1_1bergamot_1_1app_1_1Native.html  classmarian_1_1bergamot_1_1app_1_1WASM.html  define_CMakeCCompilerId_8c_1a07f8e5783674099cd7f5110e22a78cdb.html  define_CMakeCCompilerId_8c_1a2ae9b72bb13abaabfcf2ee0ba7d3fa1d.html  define_CMakeCCompilerId_8c_1a43e1cad902b6477bec893cb6430bd6c8.html  define_CMakeCCompilerId_8c_1a46d5d95daa1bef867bd0179594310ed5.html  define_CMakeCCompilerId_8c_1a81dee0709ded976b2e0319239f72d174.html  define_CMakeCCompilerId_8c_1aba35d0d200deaeb06aee95ca297acb28.html  define_CMakeCCompilerId_8c_1ad1280362da42492bbc11aa78cbf776ad.html  define_CMakeCCompilerId_8c_1adbc5372f40838899018fadbc89bd588b.html  define_CMakeCXXCompilerId_8cpp_1a2ae9b72bb13abaabfcf2ee0ba7d3fa1d.html  (+196 more)
app/: bergamot.cpp  cli.h  marian-decoder-new.cpp
go/: CMakeLists.txt  README.md
python/: CMakeLists.txt  bergamot.cpp  sample.py
python-exps/: <unk> analysis.ipynb  Basic.ipynb
sandbox/: get-data.sh  sample.py
(+254 files in other folders)
