# SWIG integration
find_package(SWIG 4.0.2)
if(SWIG_FOUND)
    include (UseSWIG)
    set(IPATH ".")
    set(SWIG_FILE "go_bergamot.i")
    set_source_files_properties(${IPATH}/${SWIG_FILE} PROPERTIES CPLUSPLUS ON)
    
    find_program(GO_EXECUTABLE go)
    if (GO_EXECUTABLE)
        set(SWIG_MODULE_NAME "go_bergamot")
        set(CMAKE_SWIG_FLAGS -c++ -go -cgo -intgosize 64)

        swig_add_library(${SWIG_MODULE_NAME} TYPE SHARED LANGUAGE go OUTPUT_DIR . SOURCES ${IPATH}/${SWIG_FILE})
        swig_link_libraries(${SWIG_MODULE_NAME} bergamot-translator)
    else()
        message("Go executable not found, golang integration not done")
    endif()
else()
    message("Swig not found, integration not done")
endif()